@@ -1,1 +1,1 @@
-DIST stallone-0.4.0.tar.gz 379203 SHA256 f012f117f6191e32a6efe09aa21c6401da7268c2b65ca3df304319cede4b63b4
+DIST stallone-0.4.0.tar.gz 379203 SHA256 f012f117f6191e32a6efe09aa21c6401da7268c2b65ca3df304319cede4b63b4 SHA512 3e93803f54ba97914153fd31358674189f7a6816a25c98b8da3ce2ee1c51cf01cef375a4bb605b95d0c0b573a5c184ca11b58d7c6d3ffdf7bd97aa53233c48e2 WHIRLPOOL 4da51921874ab9c785a4c43858d1a972ad7fb30d6e40fc2ca878f65ddff57659665f51f3bba3fd1a67933559fda0a97a3077ba2a4e802e6fd9cafccf2c4022e0
