@@ -1,8 +1,8 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI="3"
+EAPI=5
 
 inherit eutils toolchain-funcs
 
@@ -15,12 +15,15 @@ SLOT="0"
 KEYWORDS="~x86 ~amd64"
 IUSE=""
 
-DEPEND="app-text/asciidoc dev-libs/libdaemon sys-libs/libcap"
+DEPEND="
+	app-text/asciidoc
+	dev-libs/libdaemon
+	sys-libs/libcap"
 RDEPEND="${DEPEND}"
 
 S=${WORKDIR}/${P}
 
 src_install() {
-	emake DESTDIR="${D}" install || die;
+	default
 	newinitd "${FILESDIR}"/stallone.init.d stallone
 }
